--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "micromatch": "^4.0.8",
     "minimatch": "^3.1.2",
     "ms": "^2.1.3",
+    "multer": "^2.0.2",
     "nanoid": "^3.3.11",
     "natural-compare": "^1.4.0",
     "node-addon-api": "^7.1.1",
@@ -221,6 +222,7 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
