--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=http://localhost:8888/api/v1
+VITE_GOOGLE_CLIENT_ID=329712502742-eva8o5epeegmbd724b6lvv1ir1mugqk3.apps.googleusercontent.com
